# sizzling1

./: .gitignore  Cargo.toml  README.md
src/: chaos_game.rs  frac_render.rs  ifs_presets.json  main.rs  modnar.rs  mut_desc.json  randomness.rs  util.rs
src/alg/: big_range_random_cursor.rs  big_range_random_iterator.rs  combinations.rs  mod.rs
src/ds/: aff_ifs.rs  affine_mat.rs  array_2d.rs  ifs_transform.rs  mod.rs  point.rs
src/ff_repository/: affine_transform.rs  json_helper.rs  mod.rs  model.rs  mutator_description_service.rs  preset_service.rs  presets_repository.rs  repository_error.rs  service.rs
src/modnar/: mod.rs  rnd_vec.rs
src/mutators/: mod.rs  mutator_lib.rs
src/statistics/: grid_density.rs  mod.rs  plane.rs  samples.rs
src/usecase/: hd_render.rs  mod.rs  search.rs  starship_enterprise.rs
