[package]
name = "sizzling1"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.24.2"
ndarray = "0.10"
ndarray-linalg = { version = "=0.8", default-features = false }
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
rand = "0.8.5"
rand_distr = "0.4.3"
num-bigint = "0.4"
num-traits = "0.2.16"
